--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>To-do List</title>
 
-    <link href="../css/bootstrap.min.css" type="text/css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
+    <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 
-    <script src="../js/angular.js"></script>
+    <script src="js/angular.js"></script>
 
-    <script src="../js/app.js"></script>
+    <script src="js/app.js"></script>
 </head>
 <body ng-controller="NavController as navCtrl" ng-init="navCtrl.checkLocalStorage();">
 
@@ -35,9 +35,9 @@
     </div>
 
 
-<script src="../js/popper.min.js"></script>
-<script src="../js/jquery.min.js"></script>
-<script src="../js/bootstrap.bundle.min.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
